# intrepid

./: CHANGELOG.md  README.md  cabal.project  hie.yaml  intrepid.cabal
intrepid-brick/: CHANGELOG.md  LICENSE  intrepid-brick.cabal
intrepid-brick/example/: Main.hs
intrepid-brick/src/Intrepid/: Brick.hs
intrepid-core/: CHANGELOG.md  intrepid-core.cabal
intrepid-core/src/: Intrepid.hs
src/: Intrepid.hs
