cabal-version:      2.4
name:               intrepid
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ian Shipman
maintainer:         ics@gambolingpangolin.com
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src/
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Intrepid
  build-depends:
      base >=4.13 && <4.19
    , transformers >=0.5 && <0.7
